--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lumos-Portfolio",
+  "name": "DevPoint-API",
   "private": true,
   "version": "0.0.0",
   "description": "a Sails application",
