--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.9",
     "sails-disk": "~0.10.9",
+    "sails-generate-auth": "^0.3.1",
     "sails-hook-email": "^0.12.1",
     "sails-mongo": "^0.12.1"
   },
