--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bcrypt": "^0.8.7",
+    "bcryptjs": "^2.4.0",
     "cloudinary": "^1.4.6",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
@@ -25,12 +26,16 @@
     "include-all": "^1.0.0",
     "node-localdb": "0.0.3",
     "nodemailer": "^2.6.4",
+    "passport": "^0.3.2",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "rc": "1.0.1",
     "sails": "~0.12.9",
     "sails-disk": "~0.10.9",
     "sails-generate-auth": "^0.3.1",
     "sails-hook-email": "^0.12.1",
-    "sails-mongo": "^0.12.1"
+    "sails-mongo": "^0.12.1",
+    "validator": "^6.2.0"
   },
   "scripts": {
     "debug": "node debug app.js",
